primera parte de css terminada (index)

--- a/game.html
+++ b/game.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="./CSS/style.css" rel="stylesheet">
         <title>Magic 8 Ball</title>
     </head>
     <body>
      <div class="pcontainer">
         <div class="container">
             <div id="respuesta"></div>
-            <img src="https://i.postimg.cc/bYK4SV9s/magic-eight-ball-answer.png" alt="Magic 8 Ball">
+            <img class="img" src="https://i.postimg.cc/bYK4SV9s/magic-eight-ball-answer.png" alt="Magic 8 Ball">
         </div>
         <div class="item">
             <p>Deja aquí tu pregunta:</p>
