--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="./CSS/style.css" rel="stylesheet">
         <title>Magic 8 Ball</title>
     </head>
     <body>
-        <div>
+      <div class="index">
+        <div class="principal">
          <h1>¿Quieres saber que te depara el futuro?</h1>
          <h2>Pregúntale a la Bola Mágica y.... ¡obtén tus respuestas!</h2>
-         <div>
+         <div class="reglas">
             <h3>Reglas:</h3>
             <ul>
                 <li>Concentra toda tu energía en la pregunta que quieres realizar.</li>
@@ -19,10 +21,11 @@
          </div>
         </div>
         <br>
-        <div>
+        <div class="empezar">
             <img src="https://i.postimg.cc/3wR8Rb3d/Magic-eight-ball.png" alt="Bola Mágica">
             <p>Pulsa el botón cuando estés listo para continuar</p>
             <a href="./game.html"><button>Empezar</button></a>
         </div>
+      </div>
     </body>
 </html>
